--- a/css.css
+++ b/css.css
@@ -1,14 +1,7 @@
 body{
     background: #f3f3f3;
 }
-.top{
-height: 70px;
-    float: top;
-}
-.bottom{
-    height: 70px; ;
-    float: bottom;
-}
+/* phan header */
 header {
 
     height: 120px;
@@ -27,12 +20,12 @@ header h1 {
     margin-left: 160px;
     font-size: 22px;
     color: #7f8c8c;
-
+    text-decoration:none;
 }
 
 header nav {
     float: right;
-    margin-right: 300px;
+    margin-right: 140px;
     margin-top: 4px;
 }
 
@@ -44,16 +37,24 @@ header nav ul li {
 }
 
 header nav ul li a {
-    text-decoration:none;
+
     color: #fff;
-    text-transform: uppercase;
+    texttext-decoration:none;-transform: uppercase;
     font-weight: bold;
     display: block;
-
+    text-decoration:none;
     margin-right: 50px;
 }
+.top{
+    height: 70px;
+    float: top;
+}
+.bottom{
+    height: 70px; ;
+    float: bottom;
+}
 .bottom nav{
-    margin-top: 8px;
+    margin-top: 7px;
 }
 .bottom nav ul li a{
     color: black;
@@ -62,29 +63,232 @@ header nav ul li a {
 }
 
 .bottom nav ul li {
-    font-size: 10px;
+    font-size: 15px;
 }
+/* phan hero-image*/
 #hero-image {
     background-image: url(images/hero.jpg);
-    width:70%;
-    height:765px;
-    margin:3px;
+    width:78%;
+    height:600px;
+    margin:73px;
+    margin-left: 160px;
 
 }
-.button-1 {
-    display: block;
+/* phan secondary content */
+#secondary-content{
+
+    height:615px;
+}
+#content .left{
+    width:58%;
+    height:550px;
+    float:left;
+    margin-top:35px;
+    margin-left:160px;
+}
+
+.left img {
+    width: 100%;
+}
+#content .right{
+    width:20%;
+    height:550px;
+    float:right;
+    margin-top:35px;
+    margin-right:160px;
+}
+.right #top{
+    width: 90%;
+}
+.right a{
+    padding:16px;
+    float:left;
+    text-decoration:none;
+    font-weight:bold;
+    text-transform:uppercase;
+    color:#ffffff;
+    font-size:10px;
+    border-right:3px solid #ffffff;
+}
+.right a:hover {
+    color:#4C4936;
+}
+/* phan feature */
+#features {
+    margin-left: 50px;
+}
+#features ul {
+    margin: 40px 0;
+    list-style: none;
+    margin-left: 75px;
+    background-color: white;
+}
+
+#features ul li {
+    width: 298px;
+    padding-top: 140px;
+    float: left;
+    margin-right: 8px;
     text-align: center;
-    background: #444;
+
+}
+#features a {
+    padding: 1px 15px;
+    background-color: #a65980;
+    text-decoration: none;
+    font-size: 36px;
+    color: #ffffff;
+    font-weight: bold;
+    margin-left: 6px;
     border-radius: 3px;
-    color: #fff;
-    width: 180px;
-    height: 50px;
-    font-size: 20px;
-    line-height: 50px;
-    margin: 0 auto;
+    box-shadow: 2px 2px 2px #666;
+}
+#features a:hover {
+    background: #02b8dd;
+}
+#features ul li.feature-1 {
+    background: url('images/features-icon-3.png') no-repeat top center;
+    background-color: white;
+}
+#features ul li.feature-2 {
+    background: url('images/features-icon-3.png') no-repeat top center;
+    background-color: white;
+}
+#features ul li.feature-3 {
+    background: url('images/features-icon-3.png') no-repeat top center;
+    background-color: white;
+}
+#features ul li.feature-4 {
+    background: url('images/features-icon-3.png') no-repeat top center;
+    background-color: white;
+}
+#conten2 {
+    height: 150px;
+    width: 100%;
+    background-color:#f3f3f3;
+    margin-top: 0px;
+    margin-left: 0px;
+}
+#conten2_left{
+    background:#f3f3f3;
+    width: 819px;
+    height: 150px;
+    float: left;
+    margin-left: 152px;
+}
+/*slider3 ben phai*/
+#conten2_right{
+    background:#f3f3f3;
+    width: 282px;
+    height: 150px;
+    float: right;
+    margin-right: 200px;
+}
+#conten2_left button {
+    height: 40px;
+    width: 830px;
+    margin-top: 7px;
+    background:#f3f3f3;
+    border-radius: 7px
+
+}
+#conten2_right button {
+    height: 40px;
+    width: 296px;
+    margin-top: 7px;
+    background: #f3f3f3;
+    border-radius: 7px
+}
+#conten2 b {
+    float: left;
+    text-transform: uppercase;
+    padding-top: 8px;
 }
 
-.button-1:hover {
+
+
+.accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    width: 20px;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2212";
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+.accordion:hover {
+     background-color: #ccc;
+ }
+#content3 {
+    height: 150px;
+    width: 100%;
+    background-color:#f3f3f3;
+
+}
+#conten3_left{
+    background:#f3f3f3;
+    width: 819px;
+    height: 150px;
+    float: left;
+    margin-left: 152px;
+}
+/*slider3 ben phai*/
+#conten3_right{
+    background:#f3f3f3;
+    width: 282px;
+    height: 150px;
+    float: right;
+    margin-right: 200px;
+}
+#content3 img{
+    float: right;
+}
+#content3 p{
+    float: left;
+}
+.tab {
+    overflow: hidden;
+
+    background-color: #f3f3f3;;
+}
+
+/*  các nút bên trong tab*/
+.tab button {
+    background-color: #a65980;
+    float: left;
+    font-weight: bold;
+    border-radius: 9px;
+    padding: 14px 16px;
+    transition: 1s;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+/* đổi màu nền các nút khi gí chuột */
+.tab button:hover {
     background-color: #02b8dd;
-    color: #fff;
+}
+
+
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* nội dung tab */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
