--- a/css.css
+++ b/css.css
@@ -1,5 +1,6 @@
 body{
     background: #f3f3f3;
+    font-family:Arial;
 }
 /* phan header */
 header {
@@ -24,13 +25,13 @@ header h1 {
 }
 
 header nav {
-    float: right;
-    margin-right: 140px;
+    float: left;
+    margin-left: 207px;
     margin-top: 4px;
 }
 
 header nav ul li {
-    float: left;
+    float: right;
     display: inline-block;
     margin-top: 10px;
     font-size: 13px;
@@ -45,6 +46,7 @@ header nav ul li a {
     text-decoration:none;
     margin-right: 50px;
 }
+
 .top{
     height: 70px;
     float: top;
@@ -54,10 +56,13 @@ header nav ul li a {
     float: bottom;
 }
 .bottom p{
-    width: 360px;
-    float: right;
-    margin-top: 27px;
 
+    padding: 0px;
+    padding-top: 0px;
+    float: right;
+    margin-bottom: -10px;
+    margin-right: 185px;
+    margin-top: 30px;
 }
 
 .bottom a {
@@ -120,6 +125,7 @@ header nav ul li a {
     list-style: none;
     margin-left: 75px;
     background-color: white;
+    background: #f8f8f8;
 }
 
 #features ul li {
@@ -128,8 +134,12 @@ header nav ul li a {
     float: left;
     margin-right: 8px;
     text-align: center;
+    background: #f8f8f8;
+    box-shadow: 2px 2px 2px #EEEEEE;
+
 
 }
+
 #features a {
     padding: 1px 15px;
     background-color: #a65980;
@@ -139,25 +149,32 @@ header nav ul li a {
     font-weight: bold;
     margin-left: 6px;
     border-radius: 3px;
-    box-shadow: 2px 2px 2px #666;
+    box-shadow: 2px 2px 2px #f8f8f8;
+
+    letter-spacing: .1em;
+
+
 }
 #features a:hover {
     background: #02b8dd;
 }
 #features ul li.feature-1 {
     background: url('images/features-icon-3.png') no-repeat top center;
-    background-color: white;
+    background-color: #f8f8f8;
 }
 #features ul li.feature-2 {
     background: url('images/features-icon-3.png') no-repeat top center;
-    background-color: white;
+    background-color: #f8f8f8;
 }
 #features ul li.feature-3 {
     background: url('images/features-icon-3.png') no-repeat top center;
-    background-color: white;
+    background-color: #f8f8f8;
 }
 #features ul li.feature-4 {
     background: url('images/features-icon-3.png') no-repeat top center;
+    background-color: #f8f8f8;
+}
+#features ul li:hover {
     background-color: white;
 }
 #conten2 {
@@ -173,6 +190,10 @@ header nav ul li a {
     height: 150px;
     float: left;
     margin-left: 152px;
+}
+#conten2 button:hover{
+    background-color: #fff;
+
 }
 /*slider3 ben phai*/
 #conten2_right{
@@ -373,9 +394,9 @@ width: 50%;
 }
 /*Phần list link*/
 #list-link{
-    width: 1225px;
+    width: 1250px;
     margin-left: 153px;
-    height: 270px;
+    height: 343px;
 }
 
 
@@ -383,6 +404,9 @@ width: 50%;
     width: 242px;
     float: left;
     margin-left: 20px;
+
+
+
 
 }
 
@@ -394,13 +418,18 @@ width: 50%;
     text-decoration: none;
 
 }
+#links #list1 li a{
+    list-style-image: url("images/icon1.PNG");
+    list-style-position: inside;
+
+}
 /*Phân text button*/
 #text-button{
     width: 1225px;
     margin-left: 153px;
     height: 94px;
     background: #ececec;
-    border-radius: 3px;
+    border-radius: 6px;
 }
 .button {
     display: block;
@@ -415,6 +444,8 @@ width: 50%;
     float: right;
     margin:-72px;
     margin-right: 40px;
+    text-decoration: none;
+
 }
 
 .button-1:hover {
@@ -428,19 +459,20 @@ h2{
 #text-button p{
     padding-left: 20px;
 }
+/*Phần Tables*/
 .tables{
     width: 1225px;
     margin-left: 153px;
     height: 688px;
     margin-top: 66px;
 
-
 }
-/*Phần Tables*/
-table, th, td {
-    border: 1px solid #7f8c8c;
 
-    border-radius: 3px;
+table, th, td {
+    border: 0px solid #7f8c8c;
+
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 
 }
 th, td {
