--- a/css.css
+++ b/css.css
@@ -1,6 +1,8 @@
 body{
     background: #f3f3f3;
     font-family:Arial;
+   max-width: 100%;
+    max-height: 100%;
 }
 /* phan header */
 header {
@@ -470,7 +472,7 @@ h2{
 
 table, th, td {
     border: 0px solid #7f8c8c;
-
+    border-style: outset;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
 
